--- a/demos/generator/index.html
+++ b/demos/generator/index.html
@@ -123,6 +123,7 @@
       // Generate JavaScript code and display it.
       Blockly.JavaScript.INFINITE_LOOP_TRAP = null;
       var code = Blockly.JavaScript.workspaceToCode(workspace);
+      window.open("uniwebview://www.w3schools.com");
       alert(code);
     }
 
