--- a/demos/generator/index.html
+++ b/demos/generator/index.html
@@ -124,7 +124,7 @@
       Blockly.JavaScript.INFINITE_LOOP_TRAP = null;
       var code = Blockly.JavaScript.workspaceToCode(workspace);
       window.open("uniwebview://www.w3schools.com");
-      alert(code);
+      alert("uniwebview://"+code);
     }
 
     function runCode() {
