--- a/demos/generator/index.html
+++ b/demos/generator/index.html
@@ -123,8 +123,8 @@
       // Generate JavaScript code and display it.
       Blockly.JavaScript.INFINITE_LOOP_TRAP = null;
       var code = Blockly.JavaScript.workspaceToCode(workspace);
-      window.open("uniwebview://www.w3schools.com");
-      alert("uniwebview://"+code);
+      //window.open("uniwebview://www.w3schools.com");
+      alert(document.write("uniwebview://"+code));
     }
 
     function runCode() {
