--- a/demos/generator/index.html
+++ b/demos/generator/index.html
@@ -27,6 +27,7 @@
   <p>&rarr; More info on <a href="https://developers.google.com/blockly/installation/code-generators">Code Generators</a>...</p>
 
   <p>
+    <a href="javascriptlessDestination.html" onclick="myJSFunc(); return false;">Link text</a>
     <button onclick="showCode()">Show JavaScript</button>
     <button onclick="runCode()">Run JavaScript</button>
   </p>
@@ -123,8 +124,7 @@
       // Generate JavaScript code and display it.
       Blockly.JavaScript.INFINITE_LOOP_TRAP = null;
       var code = Blockly.JavaScript.workspaceToCode(workspace);
-      //window.open("uniwebview://www.w3schools.com");
-      alert(document.write("uniwebview://"+code));
+      alert(code);
     }
 
     function runCode() {
