--- a/demos/generator/index.html
+++ b/demos/generator/index.html
@@ -27,7 +27,7 @@
   <p>&rarr; More info on <a href="https://developers.google.com/blockly/installation/code-generators">Code Generators</a>...</p>
 
   <p>
-    <a href="javascriptlessDestination.html" onclick="myJSFunc(); return false;">Link text</a>
+    <a href="uniwebview://move?direction=up&distance=1">Up 1</a>
     <button onclick="showCode()">Show JavaScript</button>
     <button onclick="runCode()">Run JavaScript</button>
   </p>
