--- a/demos/generator/index.html
+++ b/demos/generator/index.html
@@ -27,7 +27,7 @@
   <p>&rarr; More info on <a href="https://developers.google.com/blockly/installation/code-generators">Code Generators</a>...</p>
 
   <p>
-    <a href="uniwebview://move?direction=up&distance=1">Up 1</a>
+    <a id="my_link_id" href="uniwebview://move?direction=up&distance=1">Up 1</a>
     <button onclick="showCode()">Show JavaScript</button>
     <button onclick="runCode()">Run JavaScript</button>
   </p>
@@ -124,6 +124,7 @@
       // Generate JavaScript code and display it.
       Blockly.JavaScript.INFINITE_LOOP_TRAP = null;
       var code = Blockly.JavaScript.workspaceToCode(workspace);
+      $('#your_link_id').get(0).click();
       alert(code);
     }
 
